# Nexis_aio

./: Tailwind.config.js  index.html  package-lock.json  package.json
backend/: .env  server.js
backend/routes/: auth.js  emails.js  mailbox.js  user.js
backend/utils/: emailParser.js
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.d.ts
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  client.rs  command.rs  lib.rs  main.rs  parser.rs  sync.rs  types.rs
src/components/: Segmentedcontrol.tsx
src/components/sidebar/: DashboardSidebar.tsx  EmailSidebar.tsx  SettingsSidebar.tsx
src/pages/: Dashboard.tsx  Email.tsx  Settings.tsx
src/services/: emailAPI-rust.ts  emailAPI.ts
