[package]
name = "nexdeck-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
