[package]
name = "nexdeck-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }

# Utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1.0"
anyhow = "1.0"

# SQLite cache (rusqlite / r2d2 / manager)
rusqlite = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"

# futures for stream utils (used in sync.rs)
futures = "0.3"

# directories helper to place DB in platform data dir (avoid watcher)
dirs-next = "2.0"

# Concurrency primitives
async-recursion = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
